HelloUltraviolet/Fixtures/RejectedSource/Expressions/SuspensionFormsDiagnosticsTable/Source/Main.uv
//! Rejected async suspension specimen for the suspension diagnostics table.

public procedure suspensionFormsDiagnosticsTableReference() -> i32 {
    let value: i32 = wait 1
    return value
}
